# rust_try

./: .gitignore  Cargo.toml  README.rst  id_type_old.rs
clap_simple/: Cargo.toml
clap_simple/src/: main.rs
compiletimelist/: Cargo.toml
compiletimelist/src/: main.rs
direct_rest/: .gitignore  Cargo.toml
direct_rest/src/: main.rs
direct_rest/src/data/: example.rs  lib.rs  request.rs  response.rs
direct_rest/src/iface/: endpoint.rs  example.rs  lib.rs  mod.rs  request.rs  response.rs  restable.rs  transfer.rs
direct_rest/src/rest_server/: server.rs
enum_types/: Cargo.toml
enum_types/src/: lib.rs
enum_types/src/enum_types/: collective.rs  field.rs  func.rs  mod.rs
first_things/src/: main.rs  todo_hof.rs
id_type/: id_type.rs
intset/: Cargo.toml  full.rs  growing.rs  main.rs  main_full.rs  mwe_for_so.rs
mut_borw_fld/: Cargo.toml
mut_borw_fld/src/: SO.md  error.rs  main.rs  rddel_both.rs  rddel_nestmatch.rs  rddel_noswitch.rs  rddel_rc.rs  rddel_todelegate_prob.rs  somethingidk.rs  workarnd.rs  wrap_rd_action.rs
parallel/: parallel.rs
refcell_generators/: main.rs
runner_extern/: Cargo.toml
runner_extern/src/: main.rs
source/: file2.rs
src/: file1.rs  file3.rs  todo_ordf64.rs
termchat/: Cargo.toml
termchat/src/: main.rs
vecborrow/: Cargo.toml  main.rs
