[package]
name = "direct_rest"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple-server = "0.3.0"

[[bin]]
name = 'server'
path = 'src/server/main.rs'

[[bin]]
name = 'client'
path = 'src/client/main.rs'

[lib]
name = 'data'
path = 'src/data/lib.rs'

[lib]
name = 'iface'
path = 'src/iface/lib.rs'
